Add api controller tests

--- a/test/fixtures/practicals.yml
+++ b/test/fixtures/practicals.yml
@@ -2,10 +2,10 @@
 
 one:
   start_time: <%= DateTime.now %>
-  end_time: <%= DateTime.now + 1.hour %>
+  end_time: <%= DateTime.now - 1.hour %>
   course: one
 
 two:
-  start_time: <%= DateTime.now %>
-  end_time: <%= DateTime.now + 1.hour %>
+  start_time: <%= DateTime.now - 10.minutes %>
+  end_time: <%= DateTime.now + 2.hour %>
   course: two
